--- a/k8s/prometheus-federation/services/nginx.yml
+++ b/k8s/prometheus-federation/services/nginx.yml
@@ -1,34 +1,52 @@
+# The controller admission webhook validates incoming configurations and
+# prevents NGINX from reloading with a bad config.
 apiVersion: v1
 kind: Service
 metadata:
-  name: default-http-backend
-  namespace: default
-spec:
-  ports:
-  - port: 80
-    targetPort: 8080
-    protocol: TCP
-  selector:
-    app: default-http-backend
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-lb
-  namespace: default
   labels:
-    app: nginx-lb
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/component: controller
+  name: ingress-nginx-controller-admission
+  namespace: default
 spec:
-  externalTrafficPolicy: Local
+  type: ClusterIP
+  ports:
+    - name: https-webhook
+      port: 443
+      targetPort: webhook
+  selector:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/component: controller
+---
+# This LoadBalancer service exposes ingress-nginx on a static IP, defined
+# by the TLS_IP per-project variable (see mlab-<project>.yml.)
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/component: controller
+  name: ingress-nginx-controller
+  namespace: default
+spec:
   type: LoadBalancer
+  externalTrafficPolicy: Local
   loadBalancerIP: {{TLS_IP}}
   ports:
-  - port: 80
-    name: http
-    targetPort: 80
-  - port: 443
-    name: https
-    targetPort: 443
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: http
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: https
   selector:
-    app: nginx
-
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/component: controller
