--- a/k8s/prometheus-federation/roles/rbac-nginx.yml
+++ b/k8s/prometheus-federation/roles/rbac-nginx.yml
@@ -82,6 +82,7 @@ rules:
       - watch
 ---
 # Bind the nginx-ingress ServiceAccount to the ClusterRole above.
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
@@ -102,6 +103,7 @@ subjects:
 # Role for nginx-ingress, which creates an instance of nginx which acts
 # as an Ingress that forwards different vhosts and paths to different Service
 # backends. This provides broader access within the nginx-ingress Namespace.
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
@@ -194,6 +196,7 @@ rules:
       - patch
 ---
 # Bind the nginx-ingress ServiceAccount to the Role above.
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
@@ -256,6 +259,7 @@ subjects:
     namespace: default
 ---
 # Role for the admission-webook
+apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: ingress-nginx-admission
