--- a/k8s/prometheus-federation/roles/rbac-nginx.yml
+++ b/k8s/prometheus-federation/roles/rbac-nginx.yml
@@ -3,12 +3,14 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
-  name: nginx-ingress
-  namespace: default
+  name: ingress-nginx
+  namespace: ingress-nginx
 ---
 # ClusterRole for nginx-ingress, which creates an instance of nginx which acts
 # as an Ingress that forwards different vhosts and paths to different Service
@@ -17,11 +19,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
   name: ingress-nginx
-  namespace: default
+  namespace: ingress-nginx
 rules:
   - apiGroups:
       - ''
@@ -86,11 +90,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
   name: ingress-nginx
-  namespace: default
+  namespace: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -98,7 +104,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
-    namespace: default
+    namespace: ingress-nginx
 ---
 # Role for nginx-ingress, which creates an instance of nginx which acts
 # as an Ingress that forwards different vhosts and paths to different Service
@@ -107,12 +113,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx
-  namespace: default
+  namespace: ingress-nginx
 rules:
   - apiGroups:
       - ''
@@ -200,12 +208,14 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx
-  namespace: default
+  namespace: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -213,7 +223,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx
-    namespace: default
+    namespace: ingress-nginx
 ---
 #
 # All of the following configuration refers to the admission-webhook.
@@ -223,12 +233,17 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: ingress-nginx-admission
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: default
+  namespace: ingress-nginx
 rules:
   - apiGroups:
       - admissionregistration.k8s.io
@@ -243,12 +258,17 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: ingress-nginx-admission
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: default
+  namespace: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -256,19 +276,24 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx-admission
-    namespace: default
+    namespace: ingress-nginx
 ---
 # Role for the admission-webook
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: ingress-nginx-admission
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: default
+  namespace: ingress-nginx
 rules:
   - apiGroups:
       - ''
@@ -283,12 +308,17 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: ingress-nginx-admission
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
-  namespace: default
+  namespace: ingress-nginx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -296,15 +326,21 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: ingress-nginx-admission
-    namespace: default
+    namespace: ingress-nginx
 ---
 # ServiceAccount for the admission-webhook.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ingress-nginx-admission
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade,post-install,post-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: admission-webhook
+  namespace: ingress-nginx
