--- a/k8s/prometheus-federation/services/ingress-nginx-controller.yml
+++ b/k8s/prometheus-federation/services/ingress-nginx-controller.yml
@@ -4,12 +4,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller-admission
-  namespace: default
+  namespace: ingress-nginx
 spec:
   type: ClusterIP
   ports:
@@ -27,16 +29,17 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    helm.sh/chart: ingress-nginx-2.11.1
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
     app.kubernetes.io/version: 0.34.1
+    app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
-  namespace: default
+  namespace: ingress-nginx
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
-  loadBalancerIP: {{TLS_IP}}
   ports:
     - name: http
       port: 80
