--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -42,24 +42,21 @@ groups:
 #
 # SwitchSLO
 #
-# A switch at a site has been down for too long and we need to contact the site
-# host or transit provider to investigate. If SNMP scraping *and* pings are both
-# failing for a certain period, then this is probaby a reasonable stand-in as an
-# "up"/"aliveness" check.
-  - alert: SwitchDownAtSite
+# A switch at a site has been unpingable for too long and we need to contact
+# the site host or transit provider to investigate.
+  - alert: SwitchUnpingableAtSite
     expr: |
-      up{job="snmp-targets",site!~".*t$"} == 0
-        and on(site) probe_success{instance=~"s1.*",module="icmp"} == 0
-          unless on(site) gmx_site_maintenance == 1
+      probe_success{instance=~"s1.*",module="icmp"} == 0
+        unless on(site) gmx_site_maintenance == 1
     for: 1d
     labels:
       repo: ops-tracker
       severity: ticket
     annotations:
-      summary: The switch at {{ $labels.site }} has been unreachable for too long.
+      summary: The switch at {{ $labels.site }} has been unpingable for too long.
       description: >
-        The SNMP exporter cannot scrape new metrics from the switch. The issue
-        could be with the switch itself, or with the transit provider.
+        The switch has been unpingable for too long. The problem could be with
+        the switch itself, or with the transit provider.
       dashboard: 'https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/?orgId=1&var-site_name={{$labels.site}}'
 
 # DownloaderIsFailingToUpdate: The downloader hasn't successfully retrieved the files in
@@ -89,57 +86,6 @@ groups:
       summary: The downloader for maxmind/routeviews feeds is down or missing.
       description: Check the status of Kubernetes clusters on each M-Lab GCP
         project. Look at the travis deployment history for m-lab/downloader.
-
-# Prometheus is unable to get data from the snmp_exporter service.
-  - alert: SnmpExporterDownOrMissing
-    expr: up{container="snmp-exporter"} == 0 or absent(up{container="snmp-exporter"})
-    for: 10m
-    labels:
-      repo: ops-tracker
-      severity: ticket
-    annotations:
-      summary: The snmp_exporter service is down or missing.
-      description: Check the status of Kubernetes clusters on each M-Lab GCP
-        project. Look at the travis deployment history for
-        m-lab/prometheus-support.
-
-# Some SNMP metrics are missing from Prometheus. These should always be present.
-# The wait period shouuld be longer than that for the SnmpExporterDownOrMissing
-# alert.
-  - alert: SnmpExporterMissingMetrics
-    expr: absent(ifHCOutOctets)
-    for: 30m
-    labels:
-      repo: ops-tracker
-      severity: ticket
-    annotations:
-      summary: Expected SNMP metrics are missing from Prometheus!
-      description: >
-        If the snmp_exporter service is running, then there may be a
-        target configuration error. Check the target definitions in GCS[1] and
-        the target status in Prometheus[2].
-
-        [1]: https://console.cloud.google.com/storage/browser/operator-mlab-oti/prometheus/snmp-targets
-        [2]: https://prometheus.mlab-oti.measurementlab.net/targets
-      dashboard: https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/
-
-# Scraping SNMP metrics from a switch is failing.
-  - alert: SnmpScrapingDownAtSite
-    expr: |
-      up{job="snmp-targets",site!~".*t$"} == 0
-        and on(site) probe_success{instance=~"s1.*",module="icmp"} == 1
-        unless on(site) gmx_site_maintenance == 1
-    for: 12h
-    labels:
-      repo: ops-tracker
-      severity: ticket
-    annotations:
-      summary: Prometheus is unable to scrape SNMP metrics from a switch.
-      description: >
-        Maybe the switch is down? Is the snmp_exporter using the right community
-        string? Look in switch-details.json in the m-lab/switch-config repo. Is
-        the IP of the snmp_exporter VM in GCE whitelisted on the switch?
-      dashboard: 'https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/?orgId=1&var-site_name={{$labels.site}}'
 
 # More than 20% of the reachable switches are up but not providing SNMP metrics.
   - alert: TooManySnmpMetricsMissing
@@ -480,25 +426,6 @@ groups:
         means there is a persistent failure in the underlying service. Please
         check the GAE dashboard and logs to determine the cause.
 
-# If no ndt_ssl traffic has been redirected to the staging instance in the past
-# hour, an alert should fire.
-  - alert: MlabNS_NdtSslReverseProxyNotWorking
-    expr: |
-      sum(sum_over_time(stackdriver_gae_app_logging_googleapis_com_user_reverse_proxy_counter{
-        resource="ndt_ssl"}[1h])) == 0
-    for: 1m
-    labels:
-      repo: dev-tracker
-      severity: ticket
-    annotations:
-      summary: mlab-ns' reverse proxy is not redirecting any ndt_ssl traffic.
-      description: >
-        mlab-ns is supposed to send some of the ndt_ssl traffic to the
-        staging instance, and this has not been happening for the past hour.
-        Please check that the probability set on Google Cloud Datastore is
-        not zero for the ndt_ssl experiment and that there are no errors
-        related to reverse proxying in the mlab-ns logs.
-
 # One or more generic (non-experiment specific) mlab-ns metrics is missing.
 # These are metrics that mlab-ns relies on to determine whether an experiment
 # should receive production traffic, so we need to make sure that the metrics
@@ -567,38 +494,6 @@ groups:
         configuration error. Check the target definitions in GCS and the target
         status in Prometheus[1].
         [1]: https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets
-
-# The collectd container should be present on the platform-cluster.
-  - alert: PlatformCluster_CoreServices_CollectdMlabMissing
-    expr: |
-      absent(collectd_mlab_success{cluster="platform-cluster"})
-    for: 1h
-    labels:
-      repo: ops-tracker
-      severity: ticket
-    annotations:
-      summary: A collectd-mlab k8s pod is missing.
-      description: The collectd-mlab service runs in the 'utilization'
-        daemonset on the platform-cluster. Is it deployed?
-
-# A collectd service should always be running.
-  - alert: PlatformCluster_CoreServices_CollectdMlabDown
-    expr: |
-      collectd_mlab_success{cluster="platform-cluster"} == 0
-        unless on(node) gmx_machine_maintenance == 1
-        unless on(node) kube_node_spec_taint{cluster="platform-cluster", key="lame-duck"}
-    for: 1h
-    labels:
-      repo: ops-tracker
-      severity: ticket
-    annotations:
-      summary: A collectd-mlab k8s pod is down.
-      description: The collectd-mlab service in the 'utilization'
-        daemonset on the platform-cluster is failing. Use `kubectl exec` to
-        investigate the container environment on a failing pod.  Run the check
-        script manually to see what the specific error is
-        (/usr/lib/nagios/plugins/check_collectd_mlab.py). If it works, check
-        cron settings, environment, etc.
 
 # One or more of the backend services handled by the nginx proxy is down.
   - alert: Prometheus_NginxProxiedServiceDown
@@ -765,8 +660,10 @@ groups:
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/ops-switch-overview
 
 # Too many ifInErrors are occuring each day on a switch uplink for too may days in a row.
+# max-by is necessary here since DISCOv2 now collections swith uplink metrics
+# from every machine at a site, so we just take the max of the 3 (mlab[1-3]).
   - alert: DataQuality_TooManySwitchIfInErrors
-    expr: increase(ifInErrors{ifAlias="uplink"}[1d]) > 100
+    expr: max by (site) (increase(ifInErrors{ifAlias="uplink"}[1d]) > 100)
     for: 7d
     labels:
       repo: ops-tracker
@@ -1100,7 +997,56 @@ groups:
         the k8s-support repository.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/sVklmeHik/prometheus-self-monitoring?orgId=1&var-datasource=Platform%20Cluster%20(mlab-oti)
 
+# Some SNMP metrics are missing from Prometheus. These should always be present.
+  - alert: PlatformCluster_SnmpMetricsMissing
+    expr: absent(ifHCOutOctets)
+    for: 30m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: Expected SNMP metrics are missing from Prometheus.
+      description: >
+        Make sure that the DISCO pod in the platform cluster is properly
+        running on all nodes. Is there a problem with the DISCO DaemonSet? Is
+        the federation job that scrapes the platform cluster down or
+        configured incorrectly.
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/
+
+  # DISCO is reporting too many errors, which likely means errors when scraping
+  # SNMP metrics from the local switch. Since DISCO scrapes across the LAN the
+  # number of errors should be close to zero.
+  - alert: PlatformCluster_TooManyDiscoCollectionErrors
+    expr: |
+      increase(disco_collect_errors_total[10m]) > 10
+        unless on(site) gmx_site_maintenance == 1
+    for: 24h
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: DISCO is reporting too many errors.
+      description: >
+        Maybe the switch is down? Is DISCO using the right community
+        string? Is the IP/prefix of the node where DISCO is running
+        whitelisted on the switch?
+      dashboard: 'https://grafana.mlab-oti.measurementlab.net/d/SuqnZ6Hiz/?orgId=1&var-site_name={{$labels.site}}'
+
+
 # Check for missing workloads.
+
+  - alert: PlatformCluster_DiscoMissing
+    expr: |
+      absent(up{container="disco", cluster="platform-cluster"})
+    for: 15m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      summary: The DISCO DaemonSet is missing or has no metrics.
+      description: The DISCO DaemonSet is missing or has no metrics. Verify
+       that the DaemonSet is healthy (`kubectl describe ds disco`).
+      dashboard: https://grafana.mlab-staging.measurementlab.net/d/tZHLFQRZk/k8s-workload-overview
 
   - alert: PlatformCluster_CadvisorMissing
     expr: absent(up{deployment="cadvisor", cluster="platform-cluster"})
