--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -491,11 +491,29 @@ scrape_configs:
     # supported configuration: https://github.com/prometheus/blackbox_exporter
     relabel_configs:
 
+      # Create static default port.
+      - source_labels: []
+        regex: .*
+        target_label: __tmp_port
+        replacement: 80
+      # Extract actual port. If there is no :(.*) pattern, use default value.
+      - source_labels: [__address__]
+        regex: .*:(.*)
+        target_label: __tmp_port
+        replacement: ${1}
+      # Extract the host. Note: the replacement value includes a trailing "." to
+      # optimize DNS lookup.
+      - source_labels: [__address__]
+        regex: (.*)(:.*)?
+        target_label: __tmp_host
+        replacement: ${1}.
+
       # The default __address__ value is a target host from the config file.
       # Here, we set (i.e. "replace") a request parameter "target" equal to the
       # host value.
-      - source_labels: [__address__]
-        regex: (.*)(:80)?
+      - source_labels: [__tmp_host, __tmp_port]
+        separator: :
+        regex: .*
         target_label: __param_target
         replacement: ${1}
 
